--- a/miniproject/README
+++ b/miniproject/README
@@ -1,4 +1,4 @@
-digital-led-style-input (LINFO1140_70692100)
+digital-led-style-input (LINFO1140)
 ========================================
 
 CPU Emulator Settings
